tests/fixtures/invalid/pow_set_bytes_bool.py
# Cannot call pow() with Set[int], Bytes, Bool
x = pow({1, 2, 3}, b"hello", True)
